// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`postOAuth2Acknowledge should redirect 2`] = `
{
  "checkApplicationCalls": [
    [
      {
        "applicationId": "abbacaca-abba-caca-abba-cacaabbacaca",
        "scope": "",
        "type": "root",
      },
    ],
  ],
  "codeGranterAcknowledgerAcknowledgeCalls": [
    [
      {
        "applicationId": "abbacaca-abba-caca-abba-cacaabbacaca",
        "scope": "auth",
        "userId": "1",
      },
      {
        "clientId": "abbacaca-abba-caca-abba-cacaabbacaca",
        "redirectURI": "https://www.example.com",
        "scope": "user",
      },
      {},
    ],
  ],
  "codeGranterAuthenticatorAuthenticateCalls": [],
  "codeGranterAuthorizerAuthorizeCalls": [],
  "logCalls": [],
  "tokenGranterAcknowledgerAcknowledgeCalls": [],
  "tokenGranterAuthorizerAuthorizeCalls": [],
}
`;

exports[`postOAuth2Acknowledge should redirect errors too 2`] = `
{
  "checkApplicationCalls": [
    [
      {
        "applicationId": "abbacaca-abba-caca-abba-cacaabbacaca",
        "scope": "",
        "type": "root",
      },
    ],
  ],
  "codeGranterAcknowledgerAcknowledgeCalls": [],
  "codeGranterAuthenticatorAuthenticateCalls": [],
  "codeGranterAuthorizerAuthorizeCalls": [],
  "logCalls": [
    [
      "debug",
      "👫 - OAuth2 acknowledge error",
      "E_UNKNOWN_ACKNOWLEDGOR_TYPE",
    ],
  ],
  "tokenGranterAcknowledgerAcknowledgeCalls": [],
  "tokenGranterAuthorizerAuthorizeCalls": [],
}
`;
